--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+
+/* In order to use google font import, put this at the top of everything */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -71,10 +76,23 @@ button:focus-visible {
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: "Jambono Medium";
+    src: local("Jambono Medium"),
+      url("./fonts/jambono-medium.ttf") format("truetype");
+  }
+  @font-face {
+    font-family: "Jambono Black";
+    src: local("Jambono Black"), 
+    url("./fonts/JambonoBlackRegular.ttf") format("truetype");
+  }
+}
+
+
 input:checked + div {
   @apply border-blue-500;
 }
 input:checked + div svg {
   @apply block;
 }
-
